@@ -1,0 +1,10 @@
+<?php
+// DO NOT CHANGE THIS FILE! It is automatically generated by extdeveval::buildAutoloadRegistry.
+// This file was generated on 2010-07-06 16:13
+
+$extensionPath = t3lib_extMgm::extPath('ig_ldap_sso_auth');
+return array(
+	'tx_igldapssoauth_scheduler_synchroniseusers'  => $extensionPath . 'lib/class.tx_igldapssoauth_scheduler_synchroniseusers.php',
+	'tx_igldapssoauth_auth'	=>	$extensionPath . 'lib/class.tx_igldapssoauth_auth.php',
+);
+?>
